--- a/src/components/GroupChat/Posts/UserPost/UserPost.css
+++ b/src/components/GroupChat/Posts/UserPost/UserPost.css
@@ -1,31 +1,32 @@
 .user-post {
-  width: 100%;
-  box-sizing: border-box;
-  border: 1px solid black;
+  width: 69%;
+  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 1% 30% 0 1%;
+  border-radius: 1em;
 }
 
 #prof-pic {
-  width: 16%;
+  width: 22%;
   height: 20vh;
   border-radius: 5em;
   margin: 1%;
 }
 
 .post-content {
-  width: 77%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-right: 2%;
+  margin-left: 5%;
 }
 
 .post-content img {
   height: 25vh;
-  width: 40%;
-  margin-bottom: 2%;
+  width: 55%;
+  margin-bottom: 5%;
 }
