--- a/src/components/SideBar/Profile/Profile.css
+++ b/src/components/SideBar/Profile/Profile.css
@@ -33,3 +33,22 @@
 .user-info p {
   font-size: .8em;
 }
+
+.edit-prof {
+  height: 15vh;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px dotted lightgrey;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.input {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
