--- a/src/components/App/SideBar/CreateGroup/CreateGroup.css
+++ b/src/components/App/SideBar/CreateGroup/CreateGroup.css
@@ -1,5 +1,5 @@
 .create-group {
-  height: 30vh;
+  height: 35vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -8,4 +8,17 @@
   margin-bottom: 2%;
   box-sizing: border-box;
   border: 1px dotted lightgrey;
+}
+
+.input {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 2%;
+}
+
+.create-group button {
+  margin: 3%;
 }
