--- a/src/components/App/SideBar/GroupsImIn/GroupsImIn.css
+++ b/src/components/App/SideBar/GroupsImIn/GroupsImIn.css
@@ -1,8 +1,7 @@
-.my-groups {
+.groups-im-in {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2%;
 }
