--- a/src/components/App/GroupChat/GroupChat.css
+++ b/src/components/App/GroupChat/GroupChat.css
@@ -14,3 +14,35 @@
   background-color: lightgrey;
   overflow: scroll;
 }
+
+.group-header {
+  height: 7vh;
+  width: 100%;
+  background-color: darkblue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.group-header h2 {
+  color: white;
+  font-size: 1em;
+  margin-left: 1%;
+}
+
+.group-header p {
+  color: white;
+  font-size: .7em;
+  margin-right: 1%;
+}
+
+.group-header div {
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  overflow: scroll;
+  color: white;
+}
