--- a/src/components/App/GroupChat/Posts/UserPost/UserPost.css
+++ b/src/components/App/GroupChat/Posts/UserPost/UserPost.css
@@ -21,12 +21,16 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
-  margin-left: 5%;
+  align-items: center;
+  /*margin-left: 5%;*/
 }
 
 .post-content img {
   height: 25vh;
   width: 55%;
   margin-bottom: 5%;
+}
+
+.user-post button {
+  margin-right: 5%;
 }
