functionality final draft

--- a/src/components/App/GroupChat/GroupChat.css
+++ b/src/components/App/GroupChat/GroupChat.css
@@ -43,6 +43,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  overflow: scroll;
-  color: white;
+/*  overflow: scroll;
+*/  color: white;
 }
