--- a/src/components/App/GroupChat/Posts/UserPost/UserPost.css
+++ b/src/components/App/GroupChat/Posts/UserPost/UserPost.css
@@ -1,16 +1,16 @@
 .user-post {
-  width: 69%;
+  width: 95%;
   background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 1% 30% 0 1%;
+  margin: 1% 0 0 2.5%;
   border-radius: 1em;
 }
 
 #prof-pic {
-  width: 22%;
+  width: 18%;
   height: 20vh;
   border-radius: 5em;
   margin: 1%;
@@ -26,8 +26,7 @@
 }
 
 .post-content img {
-  height: 25vh;
-  width: 55%;
+  height: 35vh;
   margin-bottom: 5%;
 }
 
