--- a/src/components/App/GroupChat/Posts/UserPost/UserPost.css
+++ b/src/components/App/GroupChat/Posts/UserPost/UserPost.css
@@ -1,35 +1,54 @@
 .user-post {
   width: 95%;
-  background-color: white;
-  display: flex;
+/*  background-color: white;
+*/  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  margin: 1% 0 0 2.5%;
-  border-radius: 1em;
-}
+  align-items: flex-start;
+  margin: 1% 0 0 4%;
+/*  border-radius: 1em;
+*/}
 
 #prof-pic {
-  width: 18%;
-  height: 20vh;
-  border-radius: 5em;
-  margin: 1%;
+  width: 10%;
+  height: 12vh;
+  border-radius: .5em;
+  /*margin: 1%;*/
+  position: relative;
+  left: 12%;
+  /*background-color: red;*/
 }
 
 .post-content {
-  width: 100%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  background-color: #FAFAFA;
+  border-radius: .4em;
   /*margin-left: 5%;*/
 }
 
+.text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.post-content p {
+  margin-top: 10%;
+}
+
 .post-content img {
-  height: 35vh;
+  width: 95%;
   margin-bottom: 5%;
 }
 
 .user-post button {
-  margin-right: 5%;
+  /*margin-right: 5%;*/
+  position: relative;
+  left: -17%;
+  margin-top: 1%;
+  border-style: none;
 }
