--- a/src/components/App/GroupChat/GroupHeader/GroupHeader.css
+++ b/src/components/App/GroupChat/GroupHeader/GroupHeader.css
@@ -1,8 +1,4 @@
 .users {
-  /*width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  overflow: scroll;*/
+  width: 100%;
+  margin-right: 5%;
 }
