--- a/src/components/App/Header/Header.css
+++ b/src/components/App/Header/Header.css
@@ -1,10 +1,11 @@
 .header {
-  height: 5vh;
+  height: 6vh;
   width: 100%;
-  background-color: darkgreen;
+  background-color: #162a49;
   display: flex;
   align-items: center;
-  }
+/*  border-bottom: 1px solid #FAFAFA;
+*/  }
 
 .logo {
   display: flex;
@@ -13,7 +14,14 @@
   align-items: center;
 }
 
+.header img {
+  height: 4vh;
+  width: 8%;
+  margin-left: 1%;
+}
+
 .header h1 {
-  font-size: 1.5em;
+  font-size: 1.3em;
   color: white;
+  /*margin-left: 2%;*/
 }
