--- a/src/components/App/SideBar/CreateGroup/CreateGroup.css
+++ b/src/components/App/SideBar/CreateGroup/CreateGroup.css
@@ -7,7 +7,7 @@
   align-items: center;
   margin-bottom: 2%;
   box-sizing: border-box;
-  border: 1px dotted lightgrey;
+/*  border: 1px dotted lightgrey;*/
 }
 
 .input {
