--- a/src/components/App/Header/Header.css
+++ b/src/components/App/Header/Header.css
@@ -4,24 +4,25 @@
   background-color: #162a49;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 /*  border-bottom: 1px solid #FAFAFA;
 */  }
 
 .logo {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
 .header img {
   height: 4vh;
   width: 8%;
-  margin-left: 1%;
+
 }
 
 .header h1 {
   font-size: 1.3em;
   color: white;
-  /*margin-left: 2%;*/
+  margin-right: 27%;
 }
