--- a/src/components/App/SideBar/CreateGroup/CreateGroup.css
+++ b/src/components/App/SideBar/CreateGroup/CreateGroup.css
@@ -11,7 +11,7 @@
 }
 
 .input {
-  width: 75%;
+  width: 70%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -25,4 +25,16 @@
 
 .create-group button {
   margin: 3%;
+  height: 20vh;
+  width: 20%;
+  border-style: none;
+  border-radius: .5em;
+  background-color: salmon;
+  color: white;
+}
+
+.input input {
+  background-color: #FAFAFA;
+  border-style: none;
+  border-radius: .2em;
 }
