--- a/src/components/App/SideBar/Profile/Profile.css
+++ b/src/components/App/SideBar/Profile/Profile.css
@@ -71,7 +71,7 @@
   height: 4vh;
   width: 10%;
   border-style: none;
-  background-color: lightgrey;
+  background-color: salmon;
   color: white;
 }
 
@@ -86,6 +86,6 @@
   width: 18%;
   border-radius: .5em;
   border-style: none;
-  background-color: lightgrey;
+  background-color: salmon;
   color: white;
 }
